# GF-Complete 'examples' AM file

INCLUDES=-I./ -I../include
AM_CFLAGS = -O3 $(SIMD_FLAGS) -fPIC $(INCLUDES)

bin_PROGRAMS = gf_example_1 gf_example_2 gf_example_3 gf_example_4 \
               gf_example_5 gf_example_6 gf_example_7

gf_example_1_SOURCES = gf_example_1.c
#gf_example_1_LDFLAGS = -lgf_complete
gf_example_1_LDADD = ../src/libgf_complete.la

gf_example_2_SOURCES = gf_example_2.c
#gf_example_2_LDFLAGS = -lgf_complete
gf_example_2_LDADD = ../src/libgf_complete.la

gf_example_3_SOURCES = gf_example_3.c
#gf_example_3_LDFLAGS = -lgf_complete
gf_example_3_LDADD = ../src/libgf_complete.la

gf_example_4_SOURCES = gf_example_4.c
#gf_example_4_LDFLAGS = -lgf_complete
gf_example_4_LDADD = ../src/libgf_complete.la

gf_example_5_SOURCES = gf_example_5.c
#gf_example_5_LDFLAGS = -lgf_complete
gf_example_5_LDADD = ../src/libgf_complete.la

gf_example_6_SOURCES = gf_example_6.c
#gf_example_6_LDFLAGS = -lgf_complete
gf_example_6_LDADD = ../src/libgf_complete.la

gf_example_7_SOURCES = gf_example_7.c
#gf_example_7_LDFLAGS = -lgf_complete
gf_example_7_LDADD = ../src/libgf_complete.la


